# task-manager

./: .env  Cargo.toml  README.md
migrations/2018-10-29-185040_create_task_status_enum/: down.sql  up.sql
migrations/2018-10-29-185134_create_tasks/: up.sql
migrations/2018-10-29-185313_create_task_efforts/: down.sql  up.sql
migrations/2018-10-30-233407_add_requires_internet_column/: down.sql  up.sql
migrations/2018-10-31-164436_add_priority_and_duration_columns/: down.sql  up.sql
migrations/2018-11-02-003139_add_destroyed_columns/: down.sql  up.sql
migrations/2018-11-04-204122_allow_more_events/: down.sql  up.sql
migrations/2018-12-01-161446_add_age_reset_requested_to_task_event_types/: down.sql  up.sql
src/: application.rs  connection.rs  lib.rs  models.rs  reviewer.rs  schema.rs
src/actions/: action.rs  action_request.rs  action_result.rs  active_tasks_view_action.rs  active_tasks_view_action_execution.rs  filterer_action.rs  mod.rs  scroll_action.rs  scroller_state.rs  shutdown_action.rs  task_action.rs  task_action_execution.rs  task_update_action.rs  task_update_action_execution.rs  undo_buffer_action.rs
src/commands/: active_tasks_view_command.rs  command.rs  filterer_command.rs  mod.rs  scroll_command.rs  task_command.rs  undo_buffer_command.rs
src/components/: data_source.rs  filterer.rs  mod.rs  result.rs  reviewer.rs  scorer.rs  scroller.rs  task_results_window.rs  tasks_scroller.rs  undo_buffer.rs
src/models/: direction.rs  end.rs  mod.rs  task.rs  task_duration.rs  task_effort.rs  task_event.rs  task_event_type.rs  task_priority.rs  (+1 more)
(+51 files in other folders)
