[package]
name = "task-manager"
version = "0.1.0"
authors = ["Ned Ruggeri <ruggeri@self-loop.com>"]

[dependencies]
chrono = "0.4"
# Important to build with chrono support.
diesel = { version = "1.0.0", features = ["chrono", "postgres"] }
# This lets you do enums easily with diesel.
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
pancurses = "0.16"
rustyline = "2.1.0"
